# GUIDO

./: .gitignore  README.md  guido-cuda.yaml  pyproject.toml
data/recipes/ger/: all.jsonl
data/recipes/ger/nets/: recipe_10_pn.pnml  recipe_11_pn.pnml  recipe_12_pn.pnml  recipe_13_pn.pnml  recipe_14_pn.pnml  recipe_15_pn.pnml  recipe_16_pn.pnml  recipe_17_pn.pnml  recipe_18_pn.pnml  recipe_19_pn.pnml  recipe_1_pn.pnml  recipe_20_pn.pnml  recipe_21_pn.pnml  recipe_22_pn.pnml  recipe_23_pn.pnml  recipe_24_pn.pnml  recipe_25_pn.pnml  recipe_26_pn.pnml  recipe_27_pn.pnml  recipe_28_pn.pnml  recipe_29_pn.pnml  recipe_2_pn.pnml  recipe_2_pn_debug.pnml  recipe_30_pn.pnml  recipe_31_pn.pnml  recipe_32_pn.pnml  recipe_33_pn.pnml  (+24 more)
guido/: config.py  main.py  train_and_log.py
guido/config/: config.yaml
guido/config/mlflow/: base.yaml
guido/config/optimizer/: adam.yaml
guido/config/training/: base.yaml
guido/models/process_extraction/: base_miner.py  matcher_utils.py  semantic_components.py
guido/models/text_classifier/: sentence_bert.py
guido/preprocessor/: split_data.py  utils.py
guido/preprocessor/vectorizers/: fasttext.py  glove.py  utils.py
guido/process_model/: petri_net.py  similarity_utils.py  utils.py
guido/utils/: bulletpoints.py  logging_utils.py  utils.py
output/: recipe_0_activities.jsonl  recipe_0_constraints.jsonl  recipe_0_i2sent.csv  recipe_1_activities.jsonl  recipe_1_constraints.jsonl  recipe_1_i2sent.csv  recipe_1_relations.jsonl
output/markdowns/: recipe_0.md  recipe_1.md
output/petri_nets/: recipe_0_pn.pnml  recipe_1_pn.pnml
(+5 files in other folders)
